added first section arrow button

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 </div>
             </div>
 
-            <div>
-                <button >
+            <div class="side-arrow-button">
+                <button id="left-side-button">
                     <
                 </button>
-                <button >
+                <button id="right-side-button">
                     >
                 </button>
             </div>
