added second section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             </div>
             <!-- banner ends -->
     </header>
+
+                        <!-- section one start -->
+
     <main>
         <section class="section-one">
             <div class="section-one-heading"><h5>Standard Curriculum</h5></div>
@@ -81,13 +84,72 @@
                     >
                 </button>
             </div>
-
-
         </section>
 
-    </main>
-    <footer>
+                             <!-- section one end -->
 
+                              <!-- section two start -->
+
+        <section class="section-two">
+            <h5  class="section-two-heading">Our Stories</h5>
+
+            <div class="section-two-story">
+                <div id="story-one">
+                    <img src="images/story-1.png" alt="" id="image-one">
+                    <span class="story-one-date">November 19, 2019</span>
+                    <h6 id="story-one-title">A fun toddler coloring training on
+                        classroom</h6>
+                    <p id="story-one-detail">Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                </div>
+
+                    <div class="story-common">
+                        <img class="story-image" src="images/story-2.png" alt="">
+                        <span id="second-image-date"> November 19, 2019</span>
+                        <h6 class="story-title">Find out if a school fits the
+                            family’s needs</h6>
+                    </div>
+                    <div class="story-common">
+                        <img class="story-image" src="images/story-3.png" alt="">
+                        <span id="third-image-date"> November 19, 2019</span>
+                        <h6 class="story-title">Summer math & literacy
+                            centres for kids</h6>
+                    </div>
+                    <div class="story-common">
+                        <img class="story-image" src="images/story-4.png" alt="">
+                        <span id="forth-image-date"> November 19, 2019</span>
+                        <h6 class="story-title">Classroom management
+                            techniques for new tutors</h6>
+                    </div>
+                    <div class="story-common">
+                        <img class="story-image" src="images/story-5.png" alt="">
+                        <span id="fifth-image-date"> November 19, 2019</span>
+                        <h6 class="story-title">Conversation rhymes
+                            improve kids listening</h6>
+                    </div>
+            </div>
+        </section>
+        <span  >
+            <button id="view-button"> View All </button>
+        </span>
+    </main>
+    <footer class="footer">
+        <div>
+            <img id="footer-logo" src="images/logo.png" alt="">
+            <h3 id="footer-title">Kids education</h3>
+            <p id="footer-detail" class="footer-details">
+                Beautiful branding for changes by Never Now in Australia.
+                changes is a platform for open discussion in an inclusive and
+                collaborative environment, providing the...
+            </p>
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
     </footer>
 </body>
 </html>
