added footer section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
              <div class="nav-logo" >
                 <img src="images/logo.png" alt="">
                 <h3 class="nav-title">Kids School</h3>
-                </div>
+            </div>
                 
                 <div>
                     <ul class="nav-links">
@@ -130,14 +130,17 @@
                     </div>
             </div>
         </section>
+                                        <!-- section two end -->
         <span  >
             <button id="view-button"> View All </button>
         </span>
     </main>
-    <footer class="footer">
+    <footer class="footer-conteinar">
         <div>
-            <img id="footer-logo" src="images/logo.png" alt="">
-            <h3 id="footer-title">Kids education</h3>
+            <div id="footer-address">
+                <img id="footer-logo" src="images/logo.png" alt="">
+                <h3 id="footer-title">Kids education</h3>
+            </div>
             <p id="footer-detail" class="footer-details">
                 Beautiful branding for changes by Never Now in Australia.
                 changes is a platform for open discussion in an inclusive and
@@ -145,10 +148,20 @@
             </p>
         </div>
         <div>
-
+            <h6 id="about-school">About School</h6>
+            <ul>
+               <li class="about"><a href=""></a>Home</li>
+               <li class="about"><a href=""></a>About</li>
+               <li class="about"><a href=""></a>Facilities</li>
+               <li class="about"><a href=""></a>Admission</li>
+            </ul>
         </div>
         <div>
-
+            <h6 id="touch">Keep In Touch</h6>
+            <a class="" href=""><img src="images/fb.png" alt=""></a>
+            <a href=""><img src="images/dribble.png" alt=""></a>
+            <a href=""><img src="images/twitter.png" alt=""></a>
+            <a href=""><img src="images/google+.png" alt=""></a>
         </div>
     </footer>
 </body>
