added some changes in html and css

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
                    </div>
                        <div>
                            <button class="nav-button">Contact</button>
+                           <img id="media" src="images/threelines.webp" alt="">
                        </div>
                </nav>
         </div>
         <!-- nav bar ends -->
                                 <!-- marquee tag start -->
                  <div>
-                    <marquee id="notice" width="1000px" direction="left"scrollamount="10"  height="20px" behavior="scroll" scrollamount="3">
+                    <marquee id="notice" >
                         
                         📢January 23,2024 - 12:00 AM, Welcome to you, Our Kids Academy!We have admission system from class 01 to class 10. Admission going on from January 01 to January 30.You can visit our website for more information about admission.📢We are committed to providing  good education to your child.You can trust to us...📢📢📢 
                         ...২৩ জানুয়ারী, ২০২৪ - ১২:০০ AM, আপনাকে স্বাগতম, আমাদের কিডস একাডেমি! আমাদের ১ম শ্রেণী থেকে ১০ম শ্রেণী পর্যন্ত ভর্তির ব্যবস্থা আছে। ১ জানুয়ারী থেকে ৩০ জানুয়ারী পর্যন্ত ভর্তি চলবে। ভর্তি সম্পর্কে আরও তথ্যের জন্য আপনি আমাদের ওয়েবসাইটটি দেখতে পারেন।📢আপনার সন্তানকে সুশিক্ষা প্রদানে আমরা প্রতিশ্রুতিবদ্ধ। আপনি আমাদের উপর আস্থা রাখতে পারেন.....📢📢📢
@@ -118,7 +119,7 @@
             <div class="section-two-story">
                 <div id="story-one">
                     <img src="images/story-1.png" alt="" id="image-one">
-                   <div id="bg">
+                   <div class="bg">
                     <span class="story-one-date">November 19, 2019</span>
                     <h6 id="story-one-title">A fun toddler coloring training on
                         classroom</h6>
@@ -130,7 +131,7 @@
 
                     <div class="story-common">
                         <img class="story-image" src="images/story-2.png" alt="">
-                       <div id="bg">
+                       <div class="bg">
                         <span id="second-image-date"> December 19, 2019</span>
                         <h6 class="story-title">Find out if a school fits the
                             family’s needs</h6>
@@ -138,7 +139,7 @@
                     </div>
                     <div class="story-common">
                         <img class="story-image" src="images/story-3.png" alt="">
-                       <div id="bg">
+                       <div class="bg">
                         <span id="third-image-date"> January 19, 2019</span>
                         <h6 class="story-title">Summer math & literacy
                             centres for kids</h6>
@@ -146,7 +147,7 @@
                     </div>
                     <div class="story-common">
                         <img class="story-image" src="images/story-4.png" alt="">
-                      <div id="bg">
+                      <div class="bg">
                         <span id="forth-image-date"> February 19, 2019</span>
                         <h6 class="story-title">Classroom management
                             techniques for new tutors</h6>
@@ -154,16 +155,16 @@
                     </div>
                     <div class="story-common">
                         <img class="story-image" src="images/story-5.png" alt="">
-                       <div id="bg">
+                       <div class="bg">
                         <span id="fifth-image-date"> March 19, 2019</span>
                         <h6 class="story-title">Conversation rhymes
                             improve kids listening</h6>
                        </div>
                     </div>
             </div>
-            <span id="button-div">
+            <div id="button-div">
                 <button id="view-button"> View All </button>
-            </span>
+            </div>
         </section>
                                         <!-- section two end -->
 
